--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="./src/style.css">
   </head>
   <body>
     <div class="playground"></div>
     <div class="bottom"></div>
-    <script src="src/script.js"></script>
+    <script src="./src/script.js"></script>
   </body>
 </html>
